kubernetes/ingress-gw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: integration-service-gw
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)/channel-info
        pathType: Prefix
        backend:
          service:
            name: audit-trail-gw
            port:
              number: 3002
      - path: /api(/|$)(.*)/channels
        pathType: Prefix
        backend:
          service:
            name: audit-trail-gw
            port:
              number: 3002
      - path: /api(/|$)(.*)/subscriptions
        pathType: Prefix
        backend:
          service:
            name: audit-trail-gw
            port:
              number: 3002
      - path: /api(/|$)(.*)/authentication
        pathType: Prefix
        backend:
          service:
            name: ssi-bridge
            port:
              number: 3001
      - path: /api(/|$)(.*)/identities
        pathType: Prefix
        backend:
          service:
            name: ssi-bridge
            port:
              number: 3001
      - path: /api(/|$)(.*)/verification
        pathType: Prefix
        backend:
          service:
            name: ssi-bridge
            port:
              number: 3001
---
# todo this should later link to the docs and info microservices
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: integration-service-others
spec:
  rules:
  - http:
      paths:
      - path: /info
        pathType: Prefix
        backend:
          service:
            name: audit-trail-gw
            port:
              number: 3002
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: audit-trail-gw
            port:
              number: 3002
